#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([rtmpserver-with-boost-coroutine], [0.0.1], [sqbing@gmail.com])
AC_CONFIG_SRCDIR([./src/])
AC_CONFIG_HEADERS([config.h])
LT_INIT
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE
AC_CONFIG_FILES([Makefile])

AM_PROG_CC_C_O
# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

if test "$prefix" = NONE; then
    LIBBOOST_DIR="$ac_default_prefix/lib";
else
    LIBBOOST_DIR="$prefix/lib";
fi
case "$build_os" in 
    darwin*)
    LIBBOOST_DIR="/usr/local/Cellar/boost/1.53.0/lib/"
    ;;
esac
AC_SUBST(LIBBOOST_DIR)
AC_OUTPUT
